# smem-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
examples/: ipc-client.rs  ipc-server.rs  simple.rs
src/: error.rs  lib.rs  unix.rs  win32.rs
